--- a/.gitignore
+++ b/.gitignore
@@ -196,3 +196,5 @@ dist
 # End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,macos,node
 
 src/*.js
+package.json
+package-lock.json
