--- a/src/package.json
+++ b/src/package.json
@@ -10,8 +10,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "canvas": "^2.11.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "lodash": "^4.17.21",
     "mqtt": "^5.10.3",
-    "tesseract.js": "^5.1.1",
-    "opencv4nodejs": "^5.6.0"
+    "opencv4nodejs-prebuilt-install": "^4.1.209",
+    "tesseract.js": "^5.1.1"
   }
 }
